2011-05-01  Robert Larice
 * src/xspice/mif/mifgetmod.c :
    mop up, in the shadow of the last two commits

2011-05-01  Robert Larice
 * src/spicelib/parser/inpgmod.c ,
 * src/xspice/mif/mifgetmod.c :
    cleanup, (modtmp) --> modtmp

2011-05-01  Robert Larice
 * src/spicelib/parser/inpaname.c ,
 * src/spicelib/parser/inpdpar.c ,
 * src/spicelib/parser/inpgmod.c ,
 * src/spicelib/parser/inppname.c ,
 * src/spicelib/parser/inptyplk.c ,
 * src/xspice/mif/mifgetmod.c :
    cleanup, some more (*p).foo  -->  p->foo

2011-04-30  Robert Larice
 * src/spicelib/devices/cktbindnode.c ,
 * src/spicelib/devices/hisimhv/hsmhvmask.c ,
 * src/spicelib/devices/hisimhv/hsmhvpzld.c :
    c89 compatibility, move NG_IGNORE() after declarations

2011-04-30  Robert Larice
 * src/spicelib/devices/hisimhv/hsmhvask.c ,
 * src/spicelib/devices/hisimhv/hsmhvld.c ,
 * src/spicelib/devices/hisimhv/hsmhvmask.c ,
 * src/spicelib/devices/hisimhv/hsmhvpar.c ,
 * src/spicelib/devices/hisimhv/hsmhvpzld.c :
    warnings, use NG_IGNORE()

2011-04-30  Robert Larice
 * configure.ac :
    re-enable unused-parameter Warnings

2011-04-30  Robert Larice
 * **/*	:
    various cleanups
    - usage of cp_getvar(), receives a void* in the third arg, thus remove casts
      FIXME, this function signature is error prone
    - use NG_IGNORE()
    - casts and prototypes

2011-04-29  Robert Larice
 * src/spicelib/devices/hisimhv/hsmhvnoi.c ,
 * src/spicelib/devices/hisimhv/hsmhvset.c :
    minor bug fix (broken diagnostic printout) and swallow some warnings

2011-04-29  Robert Larice
 * src/spicelib/devices/hisimhv/hsmhvdef.h :
    hisimhv implementation, ngspice has one more slot (GENowner) in GENinstance

2011-04-29  Dietmar Warning
 * src/spicelib/devices/hisimhv/** :
 * **/*	:
     add the HiSIM_HV model vers. 1.2.1

2011-04-28  Robert Larice
 * src/frontend/inpcom.c ,
    bug fix, (#329233)
      http://sourceforge.net/tracker/?func=detail&atid=423915&aid=3292330&group_id=38962
    this fix is for