@@ -28,14 +28,11 @@ int INPpName(char *parm, IFvalue * val, CKTcircuit *ckt, int dev, GENinstance *f
     int i;
 
     for (i = 0; i < *(ft_sim->devices[dev]->numInstanceParms); i++) {
-	if (strcmp(parm,
-		   ft_sim->devices[dev]->instanceParms[i].keyword) ==
-	    0) {
+	if (strcmp(parm, ft_sim->devices[dev]->instanceParms[i].keyword) == 0) {
 	    error =
 		ft_sim->setInstanceParm (ckt, fast,
-					      ft_sim->devices[dev]->
-					      instanceParms[i].id, val,
-					      NULL);
+					 ft_sim->devices[dev]->instanceParms[i].id,
+					 val, NULL);
 	    if (error)
 		return (error);
 	    break;
